unpackaged/main/default/objects/npsp__DataImport__c/npsp__DataImport__c.object-meta.xml
<CustomObject>
    <description>Custom object to hold denormalized data records that can be imported into the Nonprofit Success Pack.</description>
    <label>NPSP Data Import</label>
    <nameField>
        <displayFormat>DI-{000000}</displayFormat>
        <label>Data Import ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NPSP Data Imports</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>