unpackaged/main/default/objects/npsp__DataImport__c/fields/Account_Soft_Credit_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Account_Soft_Credit_1_Amount__c</fullName>
    <label>Account Soft Credit 1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>