unpackaged/main/default/objects/npsp__DataImport__c/fields/Account_Soft_Credit_1_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Soft_Credit_1_Status__c</fullName>
    <label>Account Soft Credit 1 Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>