unpackaged/main/default/objects/npsp__DataImport__c/fields/Account_Soft_Credit_2_Imported__c.field-meta.xml
<CustomField>
    <fullName>Account_Soft_Credit_2_Imported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Soft Credit 2 Imported</label>
    <referenceTo>npsp__Account_Soft_Credit__c</referenceTo>
    <relationshipLabel>NPSP Data Imports (Account Soft Credit 2 Imported)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports1</relationshipName>
    <type>Lookup</type>
</CustomField>