unpackaged/main/default/objects/npsp__DataImport__c/fields/Account_Soft_Credit_2_Role__c.field-meta.xml
<CustomField>
    <fullName>Account_Soft_Credit_2_Role__c</fullName>
    <label>Account Soft Credit 2 Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>