unpackaged/main/default/objects/npsp__DataImport__c/fields/Account_to_Soft_Credit_2__c.field-meta.xml
<CustomField>
    <fullName>Account_to_Soft_Credit_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account to Soft Credit 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPSP Data Imports (Account to Soft Credit 2)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports1</relationshipName>
    <type>Lookup</type>
</CustomField>