unpackaged/main/default/objects/npsp__DataImport__c/fields/Action_Code__c.field-meta.xml
<CustomField>
    <fullName>Action_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Code</label>
    <referenceTo>Action_Code__c</referenceTo>
    <relationshipLabel>NPSP Data Imports</relationshipLabel>
    <relationshipName>NPSP_Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>