unpackaged/main/default/objects/npsp__DataImport__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field looks up to the contact address</description>
    <label>Address</label>
    <referenceTo>npsp__Address__c</referenceTo>
    <relationshipLabel>NPSP Data Imports (Address)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>