unpackaged/main/default/objects/npsp__DataImport__c/fields/Arche_Batch_Number__c.field-meta.xml
<CustomField>
    <fullName>Arche_Batch_Number__c</fullName>
    <description>Unique Batch ID used by the caging vendor</description>
    <inlineHelpText>Unique Batch ID used by the caging vendor</inlineHelpText>
    <label>Arche Batch Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>