unpackaged/main/default/objects/npsp__DataImport__c/fields/Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appreciated Securities</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Common Stock</fullName>
            </value>
            <value>
                <fullName>Preferred Stock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>