unpackaged/main/default/objects/npsp__DataImport__c/fields/Asset_Value__c.field-meta.xml
<CustomField>
    <fullName>Asset_Value__c</fullName>
    <label>Asset Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>