unpackaged/main/default/objects/npsp__DataImport__c/fields/Bank_Deposit_Tracking_No_edf__c.field-meta.xml
<CustomField>
    <fullName>Bank_Deposit_Tracking_No_edf__c</fullName>
    <label>Bank Deposit Tracking No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>