unpackaged/main/default/objects/npsp__DataImport__c/fields/CampaignId__c.field-meta.xml
<CustomField>
    <fullName>CampaignId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DEL_Campaign ID</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>NPSP Data Imports (Campaign ID)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>