unpackaged/main/default/objects/npsp__DataImport__c/fields/Check_Date__c.field-meta.xml
<CustomField>
    <fullName>Check_Date__c</fullName>
    <label>Check Date</label>
    <type>Date</type>
</CustomField>