unpackaged/main/default/objects/npsp__DataImport__c/fields/Check_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Check_Reference_Number__c</fullName>
    <label>DELCheck/Reference Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>