unpackaged/main/default/objects/npsp__DataImport__c/fields/Constituency__c.field-meta.xml
<CustomField>
    <fullName>Constituency__c</fullName>
    <label>Constituency</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituency</valueSetName>
    </valueSet>
</CustomField>