unpackaged/main/default/objects/npsp__DataImport__c/fields/Contact1_Contact_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Contact1_Contact_Record_ID__c</fullName>
    <label>Contact1 Contact Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>