unpackaged/main/default/objects/npsp__DataImport__c/fields/Contact_to_Soft_Credit_2__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_Soft_Credit_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact to Soft Credit 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPSP Data Imports (Contact to Soft Credit 2)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports1</relationshipName>
    <type>Lookup</type>
</CustomField>