unpackaged/main/default/objects/npsp__DataImport__c/fields/Contact_to_Soft_Credit__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_Soft_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact to Soft Credit</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NPSP Data Imports (Contact to Soft Credit)</relationshipLabel>
    <relationshipName>NPSP_Data_Imports</relationshipName>
    <type>Lookup</type>
</CustomField>