unpackaged/main/default/objects/npsp__DataImport__c/fields/Convio_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Convio_Receipt__c</fullName>
    <label>Convio Receipt #</label>
    <length>40</length>
    <type>Text</type>
</CustomField>