unpackaged/main/default/objects/npsp__DataImport__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>American Express (MobilePay)</fullName>
            </value>
            <value>
                <fullName>BillMeLater</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Carte Blanche (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
            <value>
                <fullName>Diners Club (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>Discover (MobilePay)</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
            <value>
                <fullName>Enroute (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>JCB (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Laser (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Maestro (MobilePay)</fullName>
            </value>
            <value>
                <fullName>MasterCard</fullName>
            </value>
            <value>
                <fullName>MasterCard (MobilePay)</fullName>
            </value>
            <value>
                <fullName>PayPal</fullName>
            </value>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Solo</fullName>
            </value>
            <value>
                <fullName>Solo (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Switch (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Unknown (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Visa (MobilePay)</fullName>
            </value>
            <value>
                <fullName>Visa Electron (MobilePay)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>