unpackaged/main/default/objects/npsp__DataImport__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>C3</fullName>
            </value>
            <value>
                <fullName>C4</fullName>
            </value>
            <value>
                <fullName>CFF</fullName>
            </value>
            <value>
                <fullName>EDF Europe</fullName>
            </value>
            <value>
                <fullName>EDF Mexico</fullName>
            </value>
            <value>
                <fullName>Methane SAT</fullName>
            </value>
            <value>
                <fullName>NC PAC</fullName>
            </value>
            <value>
                <fullName>PAC</fullName>
            </value>
            <value>
                <fullName>SatMgmt, LLC</fullName>
            </value>
            <value>
                <fullName>Texas PAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>