unpackaged/main/default/objects/npsp__DataImport__c/fields/Honor_Memorial_Message__c.field-meta.xml
<CustomField>
    <fullName>Honor_Memorial_Message__c</fullName>
    <label>Honor/Memorial Message</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>