unpackaged/main/default/objects/npsp__DataImport__c/fields/Honor_Memorial_Notification_Address__c.field-meta.xml
<CustomField>
    <fullName>Honor_Memorial_Notification_Address__c</fullName>
    <label>Honor/Memorial Notification Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>