unpackaged/main/default/objects/npsp__DataImport__c/fields/Honor_Memorial_Notification_Email_Txt__c.field-meta.xml
<CustomField>
    <fullName>Honor_Memorial_Notification_Email_Txt__c</fullName>
    <label>Honor/Memorial Notification Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>