unpackaged/main/default/objects/npsp__DataImport__c/fields/Honor_Memorial_Person_to_Notify__c.field-meta.xml
<CustomField>
    <fullName>Honor_Memorial_Person_to_Notify__c</fullName>
    <label>Honor/Memorial Person to Notify</label>
    <length>75</length>
    <type>Text</type>
</CustomField>