unpackaged/main/default/objects/npsp__DataImport__c/fields/Is_Matching_Gift__c.field-meta.xml
<CustomField>
    <fullName>Is_Matching_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Matching Gift</label>
    <type>Checkbox</type>
</CustomField>