unpackaged/main/default/objects/npsp__DataImport__c/fields/Low_Value__c.field-meta.xml
<CustomField>
    <fullName>Low_Value__c</fullName>
    <label>Low Value</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>