unpackaged/main/default/objects/npsp__DataImport__c/fields/Membership_Request__c.field-meta.xml
<CustomField>
    <fullName>Membership_Request__c</fullName>
    <label>Membership Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>