unpackaged/main/default/objects/npsp__DataImport__c/fields/Multiple_Honorees_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Honorees_Email_Addresses__c</fullName>
    <label>Multiple Honorees Email Addresses</label>
    <type>TextArea</type>
</CustomField>