unpackaged/main/default/objects/npsp__DataImport__c/fields/Multiple_Honorees_Last_Names__c.field-meta.xml
<CustomField>
    <fullName>Multiple_Honorees_Last_Names__c</fullName>
    <label>Multiple Honorees Last Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>