unpackaged/main/default/objects/npsp__DataImport__c/fields/Notification_Preference__c.field-meta.xml
<CustomField>
    <fullName>Notification_Preference__c</fullName>
    <label>Notification Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Do Not Notify</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>