unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account1_City__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account1_City__c</fullName>
    <inlineHelpText>Account1.BillingCity</inlineHelpText>
    <label>Account1 City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>