unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account1_State_Province__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account1_State_Province__c</fullName>
    <inlineHelpText>Account1.BillingState</inlineHelpText>
    <label>Account1 State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>