unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account1_Website__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account1_Website__c</fullName>
    <inlineHelpText>Account1.Website</inlineHelpText>
    <label>Account1 Website</label>
    <type>Url</type>
</CustomField>