unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account1_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account1_Zip_Postal_Code__c</fullName>
    <inlineHelpText>Account1.BillingPostalCode</inlineHelpText>
    <label>Account1 Zip/Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>