unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account1ImportStatus__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account1ImportStatus__c</fullName>
    <label>Account1 Import Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>