unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account2_City__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account2_City__c</fullName>
    <inlineHelpText>Account2.BillingCity</inlineHelpText>
    <label>Account2 City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>