unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account2_Country__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account2_Country__c</fullName>
    <inlineHelpText>Account2.BillingCountry</inlineHelpText>
    <label>Account2 Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>