unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account2_Name__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account2_Name__c</fullName>
    <inlineHelpText>Account2.Name</inlineHelpText>
    <label>Account2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>