unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account2_Website__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account2_Website__c</fullName>
    <inlineHelpText>Account2.Website</inlineHelpText>
    <label>Account2 Website</label>
    <type>Url</type>
</CustomField>