unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Account2Imported__c.field-meta.xml
<CustomField>
    <fullName>npsp__Account2Imported__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account2 Imported</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NPSP Data Imports (Account2 Imported)</relationshipLabel>
    <relationshipName>Data_Imports1</relationshipName>
    <type>Lookup</type>
</CustomField>