unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Additional_Object_JSON__c.field-meta.xml
<CustomField>
    <fullName>npsp__Additional_Object_JSON__c</fullName>
    <description>This field allows a dynamic number of records for a dynamic number of objects to be created from a single Data Import record. Additional object information is stored here in JSON format.</description>
    <inlineHelpText>This field allows a dynamic number of records for a dynamic number of objects to be created from a single Data Import record. Additional object information is stored here in JSON format.</inlineHelpText>
    <label>Additional Object JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>