unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Contact1_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>npsp__Contact1_Birthdate__c</fullName>
    <inlineHelpText>Contact1.Birthdate</inlineHelpText>
    <label>Contact1 Birthdate</label>
    <type>Date</type>
</CustomField>