unpackaged/main/default/objects/npsp__DataImport__c/fields/npsp__Contact1_Consent_Message__c.field-meta.xml
<CustomField>
    <fullName>npsp__Contact1_Consent_Message__c</fullName>
    <description>Provides details on what the Contact opted in to.</description>
    <inlineHelpText>Provides details on what the Contact opted in to.</inlineHelpText>
    <label>Contact1 Consent Message</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>